Quick load for image, idle callback for animation

--- a/astro/src/pages/[lang].astro
+++ b/astro/src/pages/[lang].astro
@@ -39,12 +39,10 @@ const {
   // stories,
   // subnav,
 } = data;
-
-console.log(hero);
 ---
 
 <Wrapper locale={locale} metadesc="" title="ChromeOS.dev">
-  <AnimatedHero hero={hero} client:idle />
+  <AnimatedHero hero={hero} client:load />
 
   <script>
     import { theme } from '$js/theme';
