Add style property for theme

--- a/astro/src/sass/components/_body.scss
+++ b/astro/src/sass/components/_body.scss
@@ -6,6 +6,8 @@ html {
 }
 
 body {
+  --theme: 'auto';
+  --style-queries: 0;
   --header-height: 4rem;
   --header-spacing: 0rem;
   --header-offset: calc(var(--header-height) + var(--header-spacing));
