Add generalized homepage styling

--- a/astro/src/pages/[lang].astro
+++ b/astro/src/pages/[lang].astro
@@ -10,6 +10,7 @@ import Stories from '$components/home/Stories.svelte';
 import FeaturedPost from '$components/home/FeaturedPost.svelte';
 import Posts from '$components/home/Posts.svelte';
 import { home, landings, stories, posts } from '$$sanity';
+import '$sass/home.scss';
 
 /**
  * Builds paths for content files
