--- a/astro/src/layouts/wrapper.astro
+++ b/astro/src/layouts/wrapper.astro
@@ -62,6 +62,7 @@ const cookiejar = cookies.find((c) => c._langCode === locale.code);
     <title>{title ? title + ' | ' : ''}ChromeOS.dev</title>
     <meta name="Description" content={metadesc} />
     <meta name="theme-color" content="#1a73e8" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <link rel="icon" type="image/png" href="ix://icons/favicon.png" />
     <link rel="apple-touch-icon" href="/images/icons/pwa/icon-192x192.png" />
     {
