--- a/astro/src/layouts/wrapper.astro
+++ b/astro/src/layouts/wrapper.astro
@@ -107,11 +107,28 @@ const cookiejar = cookies.find((c) => c._langCode === locale.code);
 
     <Footer lang={locale.code} />
 
-    <script>
-      import { theme } from '$js/theme';
-      theme.init();
-    </script>
-
     <Analytics cookiejar={cookiejar} />
+
+    <script is:inline>
+      const setupTheme = () => {
+        let theme;
+        if ('localStorage' in window) {
+          theme = localStorage.getItem('theme') || null;
+        }
+
+        if (theme === null) {
+          theme =
+            window.matchMedia &&
+            window.matchMedia('(prefers-color-scheme: dark)').matches
+              ? 'dark'
+              : 'light';
+        }
+
+        document.body.setAttribute('data-theme', theme);
+        document.body.style.setProperty('--theme', theme);
+      };
+
+      setupTheme();
+    </script>
   </body>
 </html>
