--- a/astro/src/sass/components/_pre.scss
+++ b/astro/src/sass/components/_pre.scss
@@ -1,7 +1,7 @@
 %base--pre-build {
   direction: ltr;
   display: block;
-  font-family: $font-mono;
+  font-family: var(--font-mono);
   font-weight: $font-weight-normal;
   hyphens: none;
   letter-spacing: normal;
