--- a/astro/src/sass/globals/extends/_cta.scss
+++ b/astro/src/sass/globals/extends/_cta.scss
@@ -8,7 +8,7 @@
   border-radius: 4px;
   cursor: pointer;
   display: flex;
-  font-family: $font-google-sans;
+  font-family: var(--font-sans);
   justify-content: center;
   padding: 1rem 2.5rem;
   text-decoration: none;
